# no_fila

./: pubspec.yaml  readme.md
android/app/: build.gradle
backend/: Dockerfile  pyproject.toml  requirements.txt  teste
backend/app/: main.py  teste.ipynb
backend/app/models/: siac.py
backend/app/services/: siac.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart  no_fila.dart  providers.dart
frontend/lib/pages/: ajustes_page.dart  connect_siac.dart  grade_page.dart  home_page.dart  login_page.dart  login_siac_page.dart  profile_page.dart
frontend/lib/services/: auth_service.dart
frontend/lib/src/app/: auth_service.dart  siac_service.dart  userdata_service.dart
frontend/lib/src/common/: no_fila.dart  providers.dart
frontend/lib/src/controllers/: auth_check.dart
frontend/lib/src/data/: siac_repository.dart
frontend/lib/src/data/grade/: grades.dart
frontend/lib/src/models/: siac.dart
frontend/lib/src/widgets/: auth_check.dart
frontend/lib/src/widgets/pages/: grade_page.dart  home_page.dart  profile_page.dart
frontend/lib/src/widgets/pages/login/: connect_siac.dart  login_page.dart  login_siac_page.dart
frontend/lib/widgets/: auth_check.dart
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lib/: main.dart
lib/pages/: home_page.dart
lib/services/: auth_service.dart
lib/widgets/: auth_check.dart
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
