[tool.poetry]
name = "backend-nofila"
version = "0.1.0"
description = ""
authors = ["Jonathan Bispo <jonathanbispo.pessoal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
tenacity = "^8.2.3"
fastapi = "^0.104.1"
aiohttp = "^3.8.6"
numpy = "1.26.1"
pandas = "^2.1.3"
lxml = "^4.9.3"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"
mypy = "^1.7.0"
pandas-stubs = "^2.1.1.230928"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
